--- a/templates/sidebar.mustache
+++ b/templates/sidebar.mustache
@@ -1,9 +1,9 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="{{home_page}}" class="brand-link">
-        <img src="{{config.wwwroot}}/theme/cria/img/cria_logo.png" alt="{{sitename}} Logo"
-             class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">{{sitename}}</span>
+        <img src="{{config.wwwroot}}/theme/cria/img/aura_logo.svg" alt="{{sitename}} Logo"
+             class="brand-image img-fluid img-size-50 elevation-3 mr-2" style="opacity: .8; filter: brightness(0) invert(1);">
+        <span class="brand-text font-weight-light"></span>
     </a>
 
     <!-- Sidebar -->
