--- a/templates/sidebar.mustache
+++ b/templates/sidebar.mustache
@@ -3,7 +3,7 @@
     <a href="{{home_page}}" class="brand-link">
         <img src="{{config.wwwroot}}/theme/cria/img/aura_logo.svg" alt="{{sitename}} Logo"
              class="brand-image img-fluid img-size-50 elevation-3 mr-2" style="opacity: .8; filter: brightness(0) invert(1);">
-        <span class="brand-text font-weight-light"></span>
+        <span class="brand-text font-weight-light">&nbsp;</span>
     </a>
 
     <!-- Sidebar -->
