Added css to remove margin-left on logo

--- a/templates/sidebar.mustache
+++ b/templates/sidebar.mustache
@@ -1,3 +1,8 @@
+<style>
+    .brand-link .brand-image {
+        margin-left: unset;
+    }
+</style>
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="{{home_page}}" class="brand-link">
